syntax = "proto3";

package todoPackage;

service Todo{
    rpc createTodo (TodoItem) returns (TodoItem);
    rpc readTodos (noparams) returns (TodoItems);
    rpc readTodoStream (noparams) returns (stream TodoItem);
    rpc writeTodoStream (stream TodoItem) returns (stream TodoItem);
}

message noparams {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems{
    // for arr
    repeated TodoItem items = 1;
}